[workspace]
members = [
  "zomes/*/*",
]
resolver = "2"

[workspace.dependencies]
hdi = {git = "https://github.com/holochain/holochain", branch="holohash-usability-fix"}
hdk = {git = "https://github.com/holochain/holochain", branch="holohash-usability-fix"}

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
