[package]
name = "syn"
version = "0.0.1"
authors = [ "eric.harris-braun@holo.host" ]
edition = "2018"

[lib]
name = "syn"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "=1.0.104"
#chrono = { version = "0.4", features = ['alloc', 'std']}
derive_more = "0.99.9"
thiserror = "1.0.20"
hdk3 = "0"
#hc_utils = "0"
