[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "profiles_coordinator"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_coordinator"

[dependencies]
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
serde = "1"

hc_zome_profiles_coordinator = {git = "https://github.com/holochain-open-dev/profiles", tag = "for-hdk-v0.0.163", package = "hc_zome_profiles_coordinator"}