[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "profiles_coordinator"
version = "0.1.0-alpha.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_coordinator"

[dependencies]
serde = "1"
hdk = { workspace = true }

hc_zome_profiles_coordinator = {git = "https://github.com/holochain-open-dev/profiles", branch = "for-hdk-v0.4.0-dev.8"}
