[package]
edition = "2021"
name = "profiles_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_integrity"

[dependencies]
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
derive_more = "0"
serde = "1"

hc_zome_profiles_integrity = {git = "https://github.com/holochain-open-dev/profiles", tag = "for-hdk-v0.0.163", package = "hc_zome_profiles_integrity"}
