[package]
edition = "2021"
name = "profiles_integrity"
version = "0.1.0-alpha.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_integrity"

[dependencies]
derive_more = "0"
serde = "1"
hdi = { workspace = true }

hc_zome_profiles_integrity = {git = "https://github.com/holochain-open-dev/profiles", branch = "hdk-0.4.0-dev.2"}
