[package]
authors = ["eric.harris-braun@holo.host"]
edition = "2021"
name = "hc_zome_real_time_sessions_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_real_time_sessions_integrity"

[dependencies]
derive_more = "0.99.9"
hdi = "0.0.14"
serde = "1"
chrono = { version = "0.4", features = ['serde']}
