[package]
authors = ["guillem.cordoba@gmail.com", "eric@harris-braun.com"]
edition = "2021"
name = "hc_zome_syn_coordinator"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_syn_coordinator"

[dependencies]
chrono = { version = "0.4.22", default-features = false, features = [
  "clock",
  "std",
  "oldtime",
  "serde",
], optional = true }
derive_more = "0.99.9"
itertools = "0.10"
serde = "1"

hdk = { workspace = true }

hc_zome_syn_integrity = { path = "../integrity" }
