[package]
authors = ["eric.harris-braun@holo.host"]
edition = "2021"
name = "hc_zome_syn_integrity"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_syn_integrity"

[dependencies]
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }
hdi = { workspace = true }
